WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167939
[WebRTC] LibWebRTC WK2 network stack is not providing correct ports for ICE candidates
https://bugs.webkit.org/show_bug.cgi?id=167939
Summary
[WebRTC] LibWebRTC WK2 network stack is not providing correct ports for ICE c...
youenn fablet
Reported
2017-02-07 08:01:27 PST
Ports are set to zero for UDP and server TCP
Attachments
Patch
(13.66 KB, patch)
2017-02-07 08:35 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(14.79 KB, patch)
2017-02-07 11:42 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-07 08:35:31 PST
Created
attachment 300812
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-07 08:37:57 PST
Attachment 300812
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/webrtc/LibWebRTCSocketClient.h:52: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2017-02-07 09:18:19 PST
Comment on
attachment 300812
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=300812&action=review
> LayoutTests/webrtc/no-port-zero-in-upd-candidates.html:35 > + pc.createOffer().then((offer) => {
This is a great place to start using async / await!
youenn fablet
Comment 4
2017-02-07 11:42:16 PST
Created
attachment 300828
[details]
Patch for landing
youenn fablet
Comment 5
2017-02-07 11:44:29 PST
(In reply to
comment #3
)
> Comment on
attachment 300812
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=300812&action=review
> > > LayoutTests/webrtc/no-port-zero-in-upd-candidates.html:35 > > + pc.createOffer().then((offer) => { > > This is a great place to start using async / await!
Not sure how this improves things here. I did some refactoring though to isolate grabbing of all ICE candidates.
WebKit Commit Bot
Comment 6
2017-02-07 12:20:41 PST
Comment on
attachment 300828
[details]
Patch for landing Clearing flags on attachment: 300828 Committed
r211830
: <
http://trac.webkit.org/changeset/211830
>
WebKit Commit Bot
Comment 7
2017-02-07 12:20:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug